fix resources page to allow for addition of users resources Fix scroll view working properly and not being behind the footer and hiding content

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -70,9 +70,11 @@ contentFooter {
 }
 
 contentMain {
-	position: relative;
+	position: fixed;
 	padding: 10px;
-	top: 50px;
+	right: 0px;
+	left: 0px;
+	top: 120px;
 	bottom: 75px;
 	flex: 1;
 	overflow: scroll;
